--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ html {
 }
 
 .navbar__logo img {
-  width: 8rem;
+  width: 6.5rem;
   position: relative;
   left: 0.5rem;
 }
@@ -35,4 +35,5 @@ html {
 .title {
   font-size: 2.5rem;
   color: white;
+  font-weight: 500;
 }
