--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,11 @@
   margin: 0;
   font-family: "Prompt", sans-serif;
   box-sizing: border-box;
+  background-color: #141414;
 }
 
 html {
   font-size: 62.5%;
-  background-color: #141414;
 }
 
 /* NAVBAR */
@@ -38,12 +38,21 @@ html {
 }
 
 .title__lists {
-  margin-bottom: 1.5rem;
+  margin-bottom: 1rem;
 }
 .title {
   font-size: 2.5rem;
   color: #9d9d9d;
   font-weight: 700;
+}
+
+.title a {
+  text-decoration: none;
+  color: white;
+}
+
+.title a:hover {
+  color: #747474;
 }
 
 .card__lists {
@@ -57,25 +66,71 @@ html {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin: 1rem;
+  margin: 0.7rem;
+}
+
+.card :hover {
+  color: white;
 }
 
 .lists__img img {
-  width: 9rem;
+  width: 7.2rem;
   border-radius: 10px;
   padding: 1rem;
-  background-color: #9d9d9d;
-}
-.lists__img :hover {
-  border: 3px solid #3d61ff;
+  background-color: #e5e5e5;
 }
 
-.lists {
-  font-size: 1.3rem;
-  margin-top: 1rem;
-  color: #e5e5e5;
-  cursor: pointer;
+.lists__img :hover {
+  border: 3px solid #747474;
 }
-.card :hover {
-  color: #3d61ff;
+
+.lists a {
+  font-size: 1.3rem;
+  color: #747474;
+  text-decoration: none;
+}
+
+.lists__btn {
+  margin-top: 1.5rem;
+}
+
+@media screen and (min-width: 768px) {
+  .navbar__logo img {
+    width: 10rem;
+    position: relative;
+    left: 2rem;
+    top: 1rem;
+  }
+
+  /* CONTAINER */
+
+  .container__lists {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 1rem;
+    margin-bottom: 3rem;
+    width: 100%;
+    height: 62rem;
+  }
+
+  .title {
+    font-size: 4rem;
+  }
+
+  .lists__img img {
+    width: 15rem;
+    margin: 1.5rem;
+  }
+
+  .lists__img :hover {
+    border: 5px solid #747474;
+  }
+
+  .lists a {
+    font-size: 2.3rem;
+    color: #747474;
+    text-decoration: none;
+  }
 }
