--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,8 @@
 
 html {
   font-size: 62.5%;
+  width: 100%;
+  height: 100vh;
 }
 
 /* NAVBAR */
@@ -21,7 +23,7 @@ html {
   width: 7rem;
   position: relative;
   left: 1rem;
-  top: 0.5rem;
+  top: 0.7rem;
 }
 
 /* CONTAINER */
@@ -33,7 +35,6 @@ html {
   flex-direction: column;
   margin-top: 1rem;
   margin-bottom: 3rem;
-  width: 100%;
   height: 62rem;
 }
 
