--- a/css/style.css
+++ b/css/style.css
@@ -20,10 +20,10 @@ html {
 }
 
 .navbar__logo img {
-  width: 7rem;
+  width: 8rem;
   position: relative;
   left: 1rem;
-  top: 0.7rem;
+  top: 0.5rem;
 }
 
 /* CONTAINER */
@@ -99,8 +99,8 @@ html {
   .navbar__logo img {
     width: 10rem;
     position: relative;
-    left: 2rem;
-    top: 1rem;
+    left: 2.3rem;
+    top: 1.5rem;
   }
 
   /* CONTAINER */
@@ -133,5 +133,78 @@ html {
     font-size: 2.3rem;
     color: #747474;
     text-decoration: none;
+  }
+}
+
+/* NAVBAR2 */
+.navbar2 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 1rem;
+}
+
+.navbar2__logo img {
+  width: 8rem;
+  margin-top: 0.5rem;
+  position: relative;
+  left: 1rem;
+}
+.navbar2__lists {
+  width: 100%;
+  max-height: 0;
+  overflow: hidden;
+}
+.lists2 a:hover {
+  color: #3d61ff;
+}
+.lists2 a {
+  font-size: 1.5rem;
+  margin: 0 1rem;
+  color: rgb(134, 134, 134);
+  text-decoration: none;
+}
+
+.expand .navbar2__lists {
+  max-height: 100vh;
+  position: relative;
+  text-align: end;
+}
+.navbar2__bar {
+  cursor: pointer;
+  color: white;
+  font-size: 2.4rem;
+  margin-right: 1rem;
+  position: relative;
+  top: 1rem;
+}
+@media screen and (min-width: 768px) {
+  .navbar2 {
+    margin-top: 1rem;
+    margin-left: 1.3rem;
+  }
+  .navbar2__logo img {
+    width: 10rem;
+    position: relative;
+    left: 1rem;
+  }
+  .navbar2__lists {
+    width: auto;
+    display: flex;
+    justify-content: space-between;
+    max-height: 100vh;
+    margin-right: 2rem;
+  }
+  .lists2 {
+    display: flex;
+    align-items: center;
+  }
+  .lists2 a {
+    font-size: 2.4rem;
+    margin: 0 1rem;
+  }
+
+  .navbar2__bar {
+    display: none;
   }
 }
