--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,7 @@ html {
   color: white;
 }
 .lists2 a {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   margin: 0 1rem;
   color: #747474;
   text-decoration: none;
@@ -211,4 +211,42 @@ html {
   .navbar2__bar {
     display: none;
   }
+}
+
+/* PROFILE */
+.profile {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.profile__text {
+  flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.text1 {
+  font-size: 1.7rem;
+  color: #747474;
+  font-weight: 500;
+  margin: 1rem;
+}
+
+.text2 {
+  font-size: 2rem;
+  color: #e5e5e5;
+  font-weight: 700;
+  position: relative;
+  top: 0.5rem;
+}
+
+.profile__img img {
+  width: 25rem;
+  border-radius: 15px;
+  border: 3px solid #adf27c;
+  position: relative;
+  top: 2.5rem;
 }
