--- a/css/style.css
+++ b/css/style.css
@@ -226,27 +226,49 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 28rem;
 }
 
 .text1 {
-  font-size: 1.7rem;
+  font-size: 1.5rem;
   color: #747474;
   font-weight: 500;
   margin: 1rem;
 }
 
 .text2 {
-  font-size: 2rem;
+  font-size: 1.8rem;
   color: #e5e5e5;
   font-weight: 700;
   position: relative;
   top: 0.5rem;
 }
 
+.text3 {
+  font-size: 1.2rem;
+  color: #9d9d9d;
+  font-weight: 500;
+  position: relative;
+  top: 2rem;
+}
+
 .profile__img img {
-  width: 25rem;
+  width: 20rem;
   border-radius: 15px;
   border: 3px solid #adf27c;
   position: relative;
-  top: 2.5rem;
+  top: 4rem;
+}
+
+.canva {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.canva__img img {
+  width: 28rem;
+  height: 16rem;
+  position: relative;
+  top: 6rem;
 }
