--- a/css/style.css
+++ b/css/style.css
@@ -15,19 +15,14 @@ html {
 }
 
 /* NAVBAR */
-.navbar {
-  padding: 1rem;
-}
 
 .navbar__logo img {
   width: 8rem;
-  position: relative;
-  left: 1rem;
-  top: 0.5rem;
+  position: fixed;
+  left: 1.5rem;
 }
 
 /* CONTAINER */
-
 .container__lists {
   display: flex;
   justify-content: center;
@@ -35,12 +30,13 @@ html {
   flex-direction: column;
   margin-top: 1rem;
   margin-bottom: 3rem;
-  height: 62rem;
+  height: 100vh;
 }
 
 .title__lists {
   margin-bottom: 1rem;
 }
+
 .title {
   font-size: 2.5rem;
   color: #9d9d9d;
@@ -98,12 +94,8 @@ html {
 @media screen and (min-width: 768px) {
   .navbar__logo img {
     width: 10rem;
-    position: relative;
-    left: 2.3rem;
-    top: 1.5rem;
+    position: fixed;
   }
-
-  /* CONTAINER */
 
   .container__lists {
     display: flex;
@@ -113,7 +105,7 @@ html {
     margin-top: 1rem;
     margin-bottom: 3rem;
     width: 100%;
-    height: 62rem;
+    height: 100vh;
   }
 
   .title {
@@ -142,13 +134,14 @@ html {
   flex-wrap: wrap;
   justify-content: space-between;
   padding: 1rem;
+  position: fixed;
+  width: 100%;
 }
 
 .navbar2__logo img {
   width: 8rem;
-  margin-top: 0.5rem;
-  position: relative;
-  left: 1rem;
+  position: fixed;
+  margin-left: 0.5rem;
 }
 .navbar2__lists {
   width: 100%;
@@ -156,12 +149,16 @@ html {
   overflow: hidden;
   margin: 1rem;
 }
+.list2 {
+  display: flex;
+  justify-content: end;
+}
 .lists2 a:hover {
   color: white;
 }
 .lists2 a {
   font-size: 1.3rem;
-  margin: 0 1rem;
+  margin: 1rem;
   color: #747474;
   text-decoration: none;
 }
@@ -184,13 +181,11 @@ html {
 }
 @media screen and (min-width: 768px) {
   .navbar2 {
-    margin-top: 1rem;
-    margin-left: 1.3rem;
+    position: fixed;
+    top: -0.1rem;
   }
   .navbar2__logo img {
     width: 10rem;
-    position: relative;
-    left: 1rem;
   }
   .navbar2__lists {
     width: auto;
@@ -205,7 +200,7 @@ html {
   }
   .lists2 a {
     font-size: 2.3rem;
-    margin: 0 2rem;
+    margin: 0 1.5rem;
   }
 
   .navbar2__bar {
@@ -222,6 +217,7 @@ html {
 }
 
 .profile__text {
+  margin-top: 9rem;
   flex-direction: column;
   display: flex;
   justify-content: center;
@@ -233,42 +229,78 @@ html {
   font-size: 1.5rem;
   color: #747474;
   font-weight: 500;
-  margin: 1rem;
+  margin-bottom: 1rem;
 }
 
 .text2 {
   font-size: 1.8rem;
   color: #e5e5e5;
   font-weight: 700;
-  position: relative;
-  top: 0.5rem;
+  /* position: relative;
+  top: 1.5rem; */
+  margin-bottom: 1rem;
 }
 
 .text3 {
   font-size: 1.2rem;
   color: #9d9d9d;
   font-weight: 500;
-  position: relative;
-  top: 2rem;
+  /* position: relative;
+  top: 3rem; */
+  margin-bottom: 2rem;
 }
 
 .profile__img img {
   width: 20rem;
   border-radius: 15px;
   border: 3px solid #adf27c;
-  position: relative;
-  top: 4rem;
+  /* position: relative;
+  top: 5rem; */
 }
 
 .canva {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 3rem;
 }
 
 .canva__img img {
   width: 28rem;
   height: 16rem;
-  position: relative;
-  top: 6rem;
+  margin-top: 3rem;
+}
+@media screen and (min-width: 768px) {
+  .profile {
+    display: flex;
+    flex-direction: row;
+    margin-top: 10rem;
+    margin-bottom: 3rem;
+  }
+  .profile__text {
+    width: 70rem;
+    align-items: flex-start;
+  }
+  .text1 {
+    font-size: 3rem;
+  }
+
+  .text2 {
+    font-size: 4rem;
+  }
+
+  .text3 {
+    font-size: 2.4rem;
+  }
+  .profile__img img {
+    width: 40rem;
+  }
+
+  .canva__img img {
+    width: 110rem;
+    height: 60rem;
+  }
+  .canva__img {
+    margin-bottom: 5rem;
+  }
 }
