--- a/css/style.css
+++ b/css/style.css
@@ -236,8 +236,6 @@ html {
   font-size: 1.8rem;
   color: #e5e5e5;
   font-weight: 700;
-  /* position: relative;
-  top: 1.5rem; */
   margin-bottom: 1rem;
 }
 
@@ -245,8 +243,6 @@ html {
   font-size: 1.2rem;
   color: #9d9d9d;
   font-weight: 500;
-  /* position: relative;
-  top: 3rem; */
   margin-bottom: 2rem;
 }
 
@@ -254,8 +250,6 @@ html {
   width: 20rem;
   border-radius: 15px;
   border: 3px solid #adf27c;
-  /* position: relative;
-  top: 5rem; */
 }
 
 .canva {
@@ -294,6 +288,7 @@ html {
   }
   .profile__img img {
     width: 40rem;
+    border: 5px solid #adf27c;
   }
 
   .canva__img img {
