--- a/css/style.css
+++ b/css/style.css
@@ -312,7 +312,7 @@ html {
 .certificate__title {
   margin-top: 8.5rem;
   color: #e5e5e5;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 2.5rem;
 }
 .certificate__title1 {
@@ -336,6 +336,7 @@ html {
   color: #ee593b;
   font-size: 1.7rem;
   padding: 1rem;
+  font-weight: 500;
 }
 .certificate__btn {
   color: #fff;
@@ -343,6 +344,36 @@ html {
   padding: 1rem;
 }
 @media screen and (min-width: 768px) {
+  .certificate__title {
+    font-size: 4rem;
+  }
+  .certificate__title1 {
+    font-size: 2.5rem;
+  }
+  .certificate__card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  .certificate__box {
+    border: 1px solid #747474;
+    width: 40rem;
+    margin: 2.5rem;
+    height: 47rem;
+  }
+
+  .certificate__box img {
+    width: 40rem;
+    height: 29rem;
+  }
+
+  .certificate__text {
+    font-size: 2.3rem;
+  }
+  .certificate__btn {
+    font-size: 1.8rem;
+  }
 }
 
 /* CONTACT */
