--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,8 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
+  width: 28rem;
 }
 
 .card {
@@ -108,7 +110,9 @@ html {
     width: 100%;
     height: 100vh;
   }
-
+  .card__lists {
+    flex-wrap: nowrap;
+  }
   .title {
     font-size: 4rem;
   }
@@ -262,8 +266,8 @@ html {
 }
 
 .canva__img img {
-  width: 34rem;
-  height: 20rem;
+  width: 35rem;
+  height: 21rem;
   margin-top: 3rem;
 }
 @media screen and (min-width: 768px) {
@@ -375,6 +379,8 @@ html {
     font-size: 1.8rem;
   }
 }
+
+/* ACTIVITY */
 
 /* CONTACT */
 .contact {
