--- a/css/style.css
+++ b/css/style.css
@@ -307,6 +307,78 @@ html {
 }
 
 /* ACTIVITY */
+.activity {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.activity__title {
+  margin-top: 8.5rem;
+  color: #e5e5e5;
+  font-weight: 600;
+  font-size: 2.5rem;
+}
+.activity__title1 {
+  color: #747474;
+  font-size: 1.7rem;
+  margin-top: 1rem;
+  margin-bottom: 3rem;
+}
+
+.activity__box {
+  border: 1px solid #747474;
+  margin-bottom: 3rem;
+  width: 30rem;
+}
+
+.activity__box img {
+  cursor: pointer;
+}
+
+.activity__text {
+  color: #ee593b;
+  font-size: 1.7rem;
+  padding: 1rem;
+  font-weight: 500;
+}
+.activity__btn {
+  color: #fff;
+  font-size: 1.4rem;
+  padding: 1rem;
+}
+@media screen and (min-width: 768px) {
+  .activity__title {
+    font-size: 4rem;
+  }
+  .activity__title1 {
+    font-size: 2.5rem;
+  }
+  .activity__card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  .activity__box {
+    border: 1px solid #747474;
+    width: 40rem;
+    margin: 2.5rem;
+    height: 47rem;
+  }
+
+  .activity__box img {
+    width: 40rem;
+    height: 29rem;
+  }
+
+  .activity__text {
+    font-size: 2.3rem;
+  }
+  .activity__btn {
+    font-size: 1.8rem;
+  }
+}
 
 /* CERTIFICATE */
 .certificate {
